--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     },
     "license": "UNLICENSED",
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.4.9",
         "vite-plugin-symfony": "^5.0"
     }
